--- a/src/stylus/clock/footer.styl
+++ b/src/stylus/clock/footer.styl
@@ -6,7 +6,7 @@
   grid-area footer
   height var(--footer-height)
   justify-content center
-  transition border var(--transition-theme)
+  transition border var(--transition)
 
 .copyright
   font-size var(--fineprint)
