--- a/src/stylus/clock/header.styl
+++ b/src/stylus/clock/header.styl
@@ -7,7 +7,7 @@
   padding 0 5vw
   position sticky
   top 0
-  transition background var(--transition-theme), border var(--transition-theme), color var(--transition-theme)
+  transition background var(--transition), border var(--transition), color var(--transition)
 
 .header__frame
   align-items center
