--- a/src/stylus/clock/_root_vars.styl
+++ b/src/stylus/clock/_root_vars.styl
@@ -1,9 +1,9 @@
 :root
+  --button-width px_to_rem(44)
   --footer-height px_to_rem(60)
   --header-height px_to_rem(44)
   --site-header px_to_rem(16)
   --transition .3s ease-out
-  --transition-theme 1s ease-out
   --fineprint px_to_em(12)
 
   for name, values in Colors
