--- a/src/stylus/clock/color_picker.styl
+++ b/src/stylus/clock/color_picker.styl
@@ -10,10 +10,9 @@ color-picker
   display none
   height var(--header-height)
   justify-content center
-  margin 0 px_to_rem(-12) 0 0
   opacity 1
   transition opacity var(--transition), transform var(--transition)
-  width var(--header-height)
+  width var(--button-width)
 
   &:active
     transform scale(.85)
@@ -21,14 +20,11 @@ color-picker
   &:checked
     opacity .75
 
-  @media Breakpoint.MEDIUM
-    margin-right px_to_rem(-20)
-
 [no-touch] .settings__toggle:hover
   opacity .75
 
 .settings__toggle::before
-  transition border-color var(--transition-theme)
+  transition border-color var(--transition)
 
 [theme=light] .settings__toggle
   css_icon_menu(black)
@@ -44,7 +40,7 @@ color-picker
   opacity 0
   padding px_to_rem(12)
   position absolute
-  right px_to_rem(-8)
+  right px_to_rem(4)
   transform 'translateY(-%s)' % px_to_rem(12)
   transition opacity var(--transition), transform var(--transition), visibility var(--transition)
   visibility hidden
