--- a/src/stylus/clock/html.styl
+++ b/src/stylus/clock/html.styl
@@ -17,7 +17,7 @@ body
   grid-template-rows auto 1fr auto
   min-height 100vh // fallback
   min-height calc(var(--viewport-unit, 1vh) * 100)
-  transition background var(--transition-theme), color var(--transition-theme)
+  transition background var(--transition), color var(--transition)
   webfont()
 
 *
@@ -45,4 +45,6 @@ button
   appearance none
   background none
   border 0
+  margin 0
   outline 0
+  padding 0
