radio button styles fix

--- a/src/stylus/clock/html.styl
+++ b/src/stylus/clock/html.styl
@@ -41,7 +41,7 @@ svg path
 // Remove all default styles from form elements.
 button
 [type=checkbox]
-[type=checkbox]
+[type=radio]
   appearance none
   background none
   border 0
