--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -38,8 +38,11 @@ CLOCKS_MAX_WIDTH = 40rem // = 512px
 // @type Number
 CLOCK_OFFSET = (Clock.SIZE - Clock.HOURS_HAND_LENGTH - MINUTES_HAND_LENGTH) * CLOCK_WIDTH
 
+// @type String
+DARK_GREY = #222
+
 // @type Hash
-Colors = {
+ColorPalette = {
   'white': {
     face: white
     hands: black
