--- a/src/stylus/clock/themifier.styl
+++ b/src/stylus/clock/themifier.styl
@@ -6,16 +6,16 @@ app-theme
   height var(--header-height)
   justify-content center
   margin-right px_to_rem(-8)
-  transition color var(--transition)
+  transition color var(--transition), transform var(--transition)
   width var(--button-width)
 
 app-theme:focus
+app-theme:active
 [no-touch] app-theme:hover
   color var(--link-active)
 
-app-theme:active > .icon
-  transform scale(.75)
-  transition transform var(--transition)
+app-theme:active
+  transform scale(.8)
 
 .icon--themifier
-  width px_to_rem(20)
+  flex 0 0 px_to_rem(20)
