20 colors in the color palette - fixes #8

--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -47,34 +47,78 @@ ColorPalette = {
     face: white
     hands: black
   },
-  'red': {
-    face: #c00
+  'darkred': {
+    face: darkred
     hands: white
+  },
+  'crimson': {
+    face: crimson
+    hands: white
+  },
+  'tomato': {
+    face: tomato
+    hands: black
   },
   'orange': {
     face: orange
     hands: black
   },
-  'yellow': {
-    face: yellow
+  'gold': {
+    face: gold
     hands: black
   },
-  'green': {
-    face: green
+  'khaki': {
+    face: khaki
+    hands: black
+  },
+  'yellowgreen': {
+    face: yellowgreen
+    hands: black
+  },
+  'seagreen': {
+    face: seagreen
     hands: white
   },
-  'blue': {
-    face: blue
+  'teal': {
+    face: teal
     hands: white
   },
+  'lightskyblue': {
+    face: lightskyblue
+    hands: black
+  }
+  'steelblue': {
+    face: steelblue
+    hands: white
+  },
+  'royalblue': {
+    face: royalblue
+    hands: white
+  },
+  'midnightblue': {
+    face: midnightblue
+    hands: white
+  }
   'indigo': {
     face: indigo
+    hands: white
+  },
+  'blueviolet': {
+    face: blueviolet
     hands: white
   },
   'violet': {
     face: violet
     hands: black
   },
+  'hotpink': {
+    face: hotpink
+    hands: black
+  },
+  'silver': {
+    face: silver
+    hands: black
+  }
   'black': {
     face: black
     hands: white
