--- a/src/stylus/clock/themifier.styl
+++ b/src/stylus/clock/themifier.styl
@@ -1,4 +1,4 @@
-app-theme
+.themifier
   align-items center
   color var(--link)
   cursor pointer
@@ -9,12 +9,12 @@ app-theme
   transition color var(--transition), transform var(--transition)
   width var(--button-width)
 
-app-theme:focus
-app-theme:active
-[no-touch] app-theme:hover
+.themifier:focus
+.themifier:active
+[no-touch] .themifier:hover
   color var(--link-active)
 
-app-theme:active
+.themifier:active
   transform scale(.8)
 
 .icon--themifier
