all kinds of minor refactoring

--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -15,7 +15,7 @@ Breakpoint = {
 }
 
 // NOTE: All 'Clock' hash values need to stay coordinated with
-// values in 'source/js/modules/customClock.js'
+// values in 'src/js/modules/Clock.js'
 // @type Hash
 Clock = {
   SIZE: 100
