Updates themifier.styl to behave like a button

--- a/src/stylus/clock/themifier.styl
+++ b/src/stylus/clock/themifier.styl
@@ -6,6 +6,7 @@
   height var(--header-height)
   justify-content center
   margin-right px_to_rem(-8)
+  pointer-events auto
   transition color var(--transition), transform var(--transition)
   width var(--button-width)
 
