adds keyboard navigation to themifier

--- a/src/stylus/clock/themifier.styl
+++ b/src/stylus/clock/themifier.styl
@@ -11,6 +11,9 @@
   width var(--button-width)
 
 .themifier:focus
+  outline 0
+
+.themifier:focus
 .themifier:active
 [no-touch] .themifier:hover
   color var(--link-active)
