--- a/src/stylus/clock/clocks.styl
+++ b/src/stylus/clock/clocks.styl
@@ -15,10 +15,8 @@
   margin-right '-%s%' % (CLOCK_OFFSET * 4)
   padding '%s% %s% %s%' % ((CLOCK_OFFSET * 2) (CLOCK_OFFSET * 2) CLOCK_OFFSET)
 
-analog-clock
+.clock
   display block
-
-.clocks__frame > analog-clock
   flex 0 0 (CLOCK_WIDTH * 100%)
   height 100%
   margin '-%s% 0 0 -%s%' % (CLOCK_OFFSET CLOCK_OFFSET)
