clip-path for menu arrow, which is much better

--- a/src/stylus/clock/color_picker.styl
+++ b/src/stylus/clock/color_picker.styl
@@ -24,8 +24,6 @@
 .color-picker__icon
   flex 0 0 px_to_rem(20)
 
-// [1] Must be greater than MENU_ARROW
-// TODO: Update after applying clip-path the ::before pseudo-element.
 .color-picker__menu
   background white
   border-radius px_to_rem(4)
@@ -36,7 +34,7 @@
   list-style none
   margin-top px_to_rem(8)
   opacity 0
-  padding px_to_rem(18) // [1]
+  padding px_to_rem(12)
   position absolute
   right px_to_rem(-2)
   transform 'translateY(-%s)' % px_to_rem(12)
@@ -56,6 +54,7 @@
 // Menu arrow via rotated square with a shadow.
 .color-picker__menu::before
   background white
+  clip-path polygon((- MENU_ARROW / 2) (- MENU_ARROW / 2), 0 MENU_ARROW, MENU_ARROW 0)
   content ''
   display block
   elevation(1)
@@ -65,18 +64,6 @@
   top (- MENU_ARROW / 2)
   transform rotate(45deg)
   width MENU_ARROW
-
-// Cover for bottom half of menu arrow's shadow.
-// TODO: Apply clip-path to ::before pseudo-element instead
-.color-picker__menu::after
-  background white
-  content ''
-  display block
-  height MENU_ARROW
-  position absolute
-  right (MENU_ARROW / 2)
-  top 0
-  width (MENU_ARROW * 2)
 
 .color-picker__label
   display block
