elevation updates to better coordinate with other projects

--- a/src/stylus/clock/_root_vars.styl
+++ b/src/stylus/clock/_root_vars.styl
@@ -14,7 +14,7 @@
   [theme=light]
     --background #f7f7f7
     --border #ddd
-    --header-background white
+    --header-background rgba(white, .97)
     --link DARK_GREY
     --link-active rgba(DARK_GREY, .7)
     --text DARK_GREY
@@ -22,7 +22,7 @@
   [theme=dark]
     --background #262626
     --border #333
-    --header-background DARK_GREY
+    --header-background rgba(DARK_GREY, .95)
     --link white
     --link-active rgba(white, .7)
     --text white
