--- a/src/stylus/clock/clocks.styl
+++ b/src/stylus/clock/clocks.styl
@@ -1,7 +1,7 @@
 .clocks
   align-self center
   background var(--face)
-  border 1px solid var(--border)
+  elevation(1)
   grid-area content
   justify-self center
   margin 5vh 5vw
