--- a/src/stylus/clock/header.styl
+++ b/src/stylus/clock/header.styl
@@ -1,7 +1,7 @@
 .header
   background var(--header-background)
-  border-bottom 1px solid var(--border)
   color var(--text)
+  elevation(1)
   grid-area header
   padding 0 5vw
   position sticky
