--- a/src/stylus/clock/clocks.styl
+++ b/src/stylus/clock/clocks.styl
@@ -1,29 +1,59 @@
 .clocks
   align-self center
   background var(--face)
+  display grid
   elevation(1)
   grid-area content
+  grid-template-columns repeat(1fr, 26)
+  grid-template-rows repeat(1fr, 26)
   justify-self center
   margin 5vh 5vw
   max-width CLOCKS_MAX_WIDTH
   overflow hidden
   transition background var(--transition), border var(--transition)
 
-.clocks__frame
-  display flex
-  flex-wrap wrap
-  margin-right '-%s%' % (CLOCK_OFFSET * 4)
-  padding '%s% %s% %s%' % ((CLOCK_OFFSET * 2) (CLOCK_OFFSET * 2) CLOCK_OFFSET)
-
 .clock
   display block
-  flex 0 0 (CLOCK_WIDTH * 100%)
-  height 100%
-  margin '-%s% 0 0 -%s%' % (CLOCK_OFFSET CLOCK_OFFSET)
+
+.clock:nth-child(1)
+  grid-column 1 / span 10
+  grid-row 1 / span 10
+
+.clock:nth-child(2)
+  grid-column 9 / span 10
+  grid-row 1 / span 10
+
+.clock:nth-child(3)
+  grid-column 17 / span 10
+  grid-row 1 / span 10
+
+.clock:nth-child(4)
+  grid-column 1 / span 10
+  grid-row 9 / span 10
+
+.clock:nth-child(5)
+  grid-column 9 / span 10
+  grid-row 9 / span 10
+
+.clock:nth-child(6)
+  grid-column 17 / span 10
+  grid-row 9 / span 10
+
+.clock:nth-child(7)
+  grid-column 1 / span 10
+  grid-row 17 / span 10
+
+.clock:nth-child(8)
+  grid-column 9 / span 10
+  grid-row 17 / span 10
+
+.clock:nth-child(9)
+  grid-column 17 / span 10
+  grid-row 17 / span 10
 
 .clock__hand
   stroke var(--hands)
-  stroke-width '%spx' % (Clock.STROKE_WIDTH * 2)
+  stroke-width 6px
   transition stroke var(--transition)
 
 .clock__pivot
