--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -15,7 +15,7 @@ Breakpoint = {
 }
 
 // @type String
-CLOCKS_MAX_WIDTH = 40rem // = 512px
+CLOCKS_MAX_WIDTH = px_to_rem(512)
 
 // @type String
 DARK_GREY = #222
