--- a/src/stylus/clock/clocks.styl
+++ b/src/stylus/clock/clocks.styl
@@ -2,6 +2,7 @@
   align-self center
   background var(--face)
   elevation(1)
+  grid-area content
   justify-self center
   margin 5vh 5vw
   max-width CLOCKS_MAX_WIDTH
@@ -10,49 +11,47 @@
 
 .clocks__frame
   display grid
-  grid-area content
-  grid-template-columns repeat(1fr, 26)
-  grid-template-rows repeat(1fr, 26)
-  margin 10%
+  grid-template-columns repeat(32, 1fr)
+  grid-template-rows repeat(32, 1fr)
 
 .clock
   display block
 
 .clock:nth-child(1)
-  grid-column 1 / span 10
-  grid-row 1 / span 10
+  grid-column 4 / span 10
+  grid-row 4 / span 10
 
 .clock:nth-child(2)
-  grid-column 9 / span 10
-  grid-row 1 / span 10
+  grid-column 12 / span 10
+  grid-row 4 / span 10
 
 .clock:nth-child(3)
-  grid-column 17 / span 10
-  grid-row 1 / span 10
+  grid-column 20 / span 10
+  grid-row 4 / span 10
 
 .clock:nth-child(4)
-  grid-column 1 / span 10
-  grid-row 9 / span 10
+  grid-column 4 / span 10
+  grid-row 12 / span 10
 
 .clock:nth-child(5)
-  grid-column 9 / span 10
-  grid-row 9 / span 10
+  grid-column 12 / span 10
+  grid-row 12 / span 10
 
 .clock:nth-child(6)
-  grid-column 17 / span 10
-  grid-row 9 / span 10
+  grid-column 20 / span 10
+  grid-row 12 / span 10
 
 .clock:nth-child(7)
-  grid-column 1 / span 10
-  grid-row 17 / span 10
+  grid-column 4 / span 10
+  grid-row 20 / span 10
 
 .clock:nth-child(8)
-  grid-column 9 / span 10
-  grid-row 17 / span 10
+  grid-column 12 / span 10
+  grid-row 20 / span 10
 
 .clock:nth-child(9)
-  grid-column 17 / span 10
-  grid-row 17 / span 10
+  grid-column 20 / span 10
+  grid-row 20 / span 10
 
 .clock__hand
   stroke var(--hands)
