stylus constants refactored, renamed, cleaned up

--- a/src/stylus/clock/clocks.styl
+++ b/src/stylus/clock/clocks.styl
@@ -20,7 +20,7 @@
   grid-template-rows repeat(32, 1fr) // [1]
   justify-self center
   margin 5vh 5vw
-  max-width CLOCKS_MAX_WIDTH
+  max-width MAX_WIDTH
   overflow hidden
   transition background var(--transition), border var(--transition)
 
