--- a/src/stylus/clock/header.styl
+++ b/src/stylus/clock/header.styl
@@ -13,7 +13,7 @@
   display flex
   height var(--header-height)
   margin 0 auto
-  max-width CLOCKS_MAX_WIDTH
+  max-width MAX_WIDTH
 
 .site-name
   font-size var(--site-header)
