--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -1,7 +1,10 @@
 @import 'functions';
 
-// @const String
-BUTTON_HEIGHT = px_to_rem(40)
+// @type String
+DARK_GREY = #222
+
+// @type String
+MAX_WIDTH = px_to_rem(512)
 
 // @const String
 MENU_ARROW = px_to_rem(16)
@@ -13,12 +16,6 @@ MENU_ITEM_SIZE = px_to_rem(32)
 Breakpoint = {
   MEDIUM: 'screen and (min-width: %s)' % px_to_rem(640)
 }
-
-// @type String
-CLOCKS_MAX_WIDTH = px_to_rem(512)
-
-// @type String
-DARK_GREY = #222
 
 // @type Hash
 ColorPalette = {
