--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -3,8 +3,8 @@ html(lang="en")
   head
     title Clock
     meta(charset="utf-8")
-    meta(name="description", content="Analog clock whose nine sets of hands reveal patterns of time")    
-    meta(name="viewport", content="width=device-width,initial-scale=1")
-    meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(name="description" content="Analog clock whose nine sets of hands reveal patterns of time")    
+    meta(name="viewport" content="width=device-width,initial-scale=1")
+    meta(name="apple-mobile-web-app-capable" content="yes")
   body
 
