webfont via assets subdomain

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -6,5 +6,6 @@ html(lang="en")
     meta(name="description" content="Analog clock whose nine sets of hands reveal patterns of time")    
     meta(name="viewport" content="width=device-width,initial-scale=1")
     meta(name="apple-mobile-web-app-capable" content="yes")
+    link(href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" rel="preload" as="font" type="font/woff2" crossorigin="crossorigin")
   body
 
