muted copyright footer color

--- a/src/stylus/clock/footer.styl
+++ b/src/stylus/clock/footer.styl
@@ -6,6 +6,7 @@
   grid-area footer
   height var(--footer-height)
   justify-content center
+  opacity .7
   transition border var(--transition)
 
 .copyright
