--- a/src/stylus/clock.styl
+++ b/src/stylus/clock.styl
@@ -1,11 +1,2 @@
-@import './config/constants'
-@import './config/functions'
-@import './config/mixins'
-
-@import './clock/_root_vars'
-@import './clock/html'
-@import './clock/clocks'
-@import './clock/color_picker'
-@import './clock/footer'
-@import './clock/header'
-@import './clock/themifier'
+@import './config/index'
+@import './clock/index'
