--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -7,5 +7,6 @@ html(lang="en")
     meta(name="viewport" content="width=device-width,initial-scale=1")
     meta(name="apple-mobile-web-app-capable" content="yes")
     link(href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" rel="preload" as="font" type="font/woff2" crossorigin="crossorigin")
+    link(rel="manifest" href="/pwa/manifest.json")
   body
 
