PWA setup per https://webpack.js.org/guides/progressive-web-application/ (but still very much a work in progress)

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -5,8 +5,11 @@ html(lang="en")
     meta(charset="utf-8")
     meta(name="description" content="Analog clock whose nine sets of hands reveal patterns of time")    
     meta(name="viewport" content="width=device-width,initial-scale=1")
+    meta(name="theme-color" content="#fff")
     meta(name="apple-mobile-web-app-capable" content="yes")
     link(href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" rel="preload" as="font" type="font/woff2" crossorigin="crossorigin")
     link(rel="manifest" href="/pwa/manifest.json")
+    link(rel="apple-touch-icon" href="/apple-touch-icon.png")
   body
+    noscript Please enable JavaScript to view.
 
