CSS refactored into shell.css and clock.css

--- a/src/stylus/clock.styl
+++ b/src/stylus/clock.styl
@@ -1,2 +1,5 @@
 @import './config/index'
-@import './clock/index'
+
+@import './clock/clocks'
+@import './clock/color_picker'
+@import './clock/themifier'
