--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,22 +1,24 @@
+- var description = "Analog clock whose nine sets of hands reveal patterns of time"
 doctype html
 html(lang="en")
   head
     title Clock
     meta(charset="utf-8")
-    meta(name="description" content="Analog clock whose nine sets of hands reveal patterns of time")    
+    meta(name="description" content=description)    
     meta(name="viewport" content="width=device-width,initial-scale=1")
     meta(name="theme-color" content="#fff")
     meta(name="apple-mobile-web-app-capable" content="yes")
     link(rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin")
-    link(rel="manifest" href="/pwa/manifest.json")
     link(rel="apple-touch-icon" href="/apple-touch-icon.png")
+    link(rel="manifest" href="/pwa/manifest.json")
+    link(rel="stylesheet" href="/shell.css")
   body
     header.header
       div.header__frame
         h1.site-name Clock
-    main.clocks
+    main.content
       noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
     footer.footer
       p.copyright
-        span.copyright__years ©
+        span.copyright__years © 2018
         a.copyright__owner Ben Gauslin
