css via link instead of style since this is a PWA now and also has an 'enable js' message

--- a/src/stylus/clock.styl
+++ b/src/stylus/clock.styl
@@ -1,5 +1,2 @@
 @import './config/index'
-
-@import './clock/clocks'
-@import './clock/color_picker'
-@import './clock/themifier'
+@import './clock/index'
