--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,8 +1,10 @@
-- var description = "Analog clock whose nine sets of hands reveal patterns of time"
+- const title = "Clock"
+- const description = "Analog clock whose nine sets of hands reveal patterns of time"
+
 doctype html
 html(lang="en")
   head
-    title Clock
+    title= title
     meta(charset="utf-8")
     meta(name="description" content=description)    
     meta(name="viewport" content="width=device-width,initial-scale=1")
@@ -14,10 +16,10 @@ html(lang="en")
   body
     header.header
       div.header__frame
-        h1.site-name Clock
+        h1.site-name= title
     main.content
       noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
     footer.footer
       p.copyright
         span.copyright__years © 2018
-        a.copyright__owner Ben Gauslin
+        a.copyright__owner(href="https://gauslin.com" title="Gauslin.com") Ben Gauslin
