--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -22,4 +22,9 @@ html(lang="en")
     footer.footer
       p.copyright
         span.copyright__years © 2018
-        a.copyright__owner(href="https://gauslin.com" title="Gauslin.com") Ben Gauslin
+        a.copyright__owner(
+          href="https://gauslin.com",
+          title="Ben Gauslin’s Website",
+          target="_blank",
+          rel="noopener",
+        ) Ben Gauslin
