iphone notch layout styles updates

--- a/src/stylus/clock/footer.styl
+++ b/src/stylus/clock/footer.styl
@@ -1,15 +1,16 @@
 .footer
-  align-items center
   color var(--text)
-  display flex
   grid-area footer
-  height var(--footer-height)
-  justify-content center
   opacity .7
+  padding 0 0 env(safe-area-inset-bottom)
   transition border var(--transition)
 
 .copyright
+  align-items center
+  display flex
   font-size var(--fineprint)
+  height var(--footer-height)
+  justify-content center
   margin 0
   padding 0
   text-align center
