--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -7,7 +7,7 @@ html(lang="en")
     title= title
     meta(charset="utf-8")
     meta(name="description" content=description)    
-    meta(name="viewport" content="width=device-width,initial-scale=1")
+    meta(name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover")
     meta(name="theme-color" content="#fff")
     meta(name="apple-mobile-web-app-capable" content="yes")
     link(rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin")
