--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -14,7 +14,7 @@ html(lang="en")
     link(rel="apple-touch-icon" href="/apple-touch-icon.png")
     link(rel="manifest" href="/pwa/manifest.json")
   body
-    header.header
+    app-header.header
       div.header__frame
         h1.site-name= title
     main.content
